# noetix_sdk_e1

./: .gitignore  CMakeLists.txt  README.md  build.sh
examples_cpp/: example_high.cpp  example_low.cpp
examples_py/: highcontrol_py.pyi  lowcontrol_py.pyi  test_high.py  test_low.py
include/: RotationTools.h  aolion_driver.h  common.h  highcontroller.h  lowcontroller.h
include/idl/: Robot_setmode.hpp
src/: highcontrol_pybind.cpp  highcontroller.cpp  lowcontrol_pybind.cpp  lowcontroller.cpp
